# nonebot-plugin-hullqin-game

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_hullqin_game/: __init__.py  config.py
nonebot_plugin_hullqin_game/commands/: open_games.py  query_games.py  stop_games.py
nonebot_plugin_hullqin_game/utils/: data_manager.py  game_scraper.py  install_browser.py  room_ws_fetcher.py  ws_pb2.py
